sandbox/output
GildedRose.java:11: error: cannot find symbol
            ItemStrategy itemStrategy = StrategyFactory.create(items[i].name);
            ^
  symbol:   class ItemStrategy
  location: class GildedRose
GildedRose.java:11: error: cannot find symbol
            ItemStrategy itemStrategy = StrategyFactory.create(items[i].name);
                                        ^
  symbol:   variable StrategyFactory
  location: class GildedRose
2 errors
